# ferric-floppa

./: .gitignore  Cargo.toml  LICENCE  README.md  schema.md
.sqlx/: query-9da3ef92b4224ff046ca9a28558951afd4a06e48c9a277636bacc0dcfd5ac411.json  query-a48725d5502a408ed8646c99cc84941a389e5d8323fe505100c78f67a548245f.json  query-b4bc16b8e43f308a1810660ead78c209503fcdd5f0ed97eaeb2b6170ac065ebc.json
ferric-floppa/: Cargo.toml
ferric-floppa/src/: args.rs  cfg.rs  config.rs  consts.rs  handler.rs  log.rs  main.rs
ferric-floppa/src/command/: mod.rs  text_cmds.rs
ferric-floppa/src/util/: error.rs  mod.rs  send_msg.rs
floppa/: Cargo.toml  build.rs
floppa-macros/: Cargo.toml
floppa-macros/src/: args.rs  lib.rs
floppa-runner/: Cargo.toml
floppa-runner/src/: log.rs  main.rs
floppa/assets/: add_command.sql  get_commands.sql  schema.sql  update_command.sql
floppa/src/: command.rs  config.rs  handler.rs  lib.rs  log.rs  main.rs  sql.rs  stuff.rs
floppa/src/command/: construct.rs  inner.rs  mod.rs
floppa/src/command/impls/: add.rs  edit.rs  flop_count.rs  info.rs  link.rs  markers.rs  mod.rs  msg.rs  remove.rs  role.rs  stoik.rs  version.rs  wiki.rs
libfloppa/: Cargo.toml
libfloppa/src/: config.rs  lib.rs
macro-test/: Cargo.toml
macro-test/src/: main.rs
messagable/: Cargo.toml
messagable/src/: lib.rs
