[package]
name = "ferric-floppa"
version = "0.0.0"
edition = "2021"
default-run = "ferric-floppa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.11.5",  default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.1.4", features = [ "derive" ] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
itertools = "0.10.5"
serde = "1.0"
toml = "0.7.2"
