[package]
name = "ferric-floppa"
version = "0.0.0"
edition = "2021"
default-run = "ferric-floppa"
authors = ["htmlcsjs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.3.5", features = ["derive"] }
futures = "0.3.28"
twilight-cache-inmemory = "0.15.2"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
anyhow = "1.0.71"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
serde = "1.0"
serde_yaml = "0.9"
