[package]
name = "floppa-runner"
version = "0.0.0"
edition = "2021"
default-run = "floppa"
authors = ["htmlcsjs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
serenity = "0.11"
tracing-subscriber = "0.3"
tracing = "0.1"
serde = "1.0"
ureq = { version = "2.7", features = ["json"]}
floppa = { path = "../floppa/", package = "floppa"}

[[bin]]
name = "floppa"
path = "src/main.rs" 
