[package]
name = "floppa"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.3", features = ["derive"] }
futures = "0.3"
serenity = "0.11"
color-eyre = "0.6"
tracing = "0.1"
serde = "1.0"
serde_yaml = "0.9"
async-trait = "0.1"
