[package]
name = "floppa"
version = "0.0.0"
edition = "2021"
default-run = "floppa"
authors = ["htmlcsjs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["macros", "rt-multi-thread", "fs"] }
clap = { version = "4.3", features = ["derive"] }
color-eyre = "0.6"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tracing-subscriber = "0.3"
tracing = "0.1"
serde = "1.0"
serde_yaml = "0.9"
ureq = { version = "2.7", features = ["json"] }
rmp-serde = "1.1.2"
rmpv = { version = "1.0.1", features = ["with-serde"] }
messagable = { path = "../messagable" }
