[package]
name = "messagable"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "builder",
    "rustls_backend",
    "model",
] }
async-trait = "0.1"
